Migrate to ZIO 2.0.0 final with various improvements