@@ -10,6 +10,16 @@ ZWords is a Wordle (motus) like game using [scala][scala], [ZIO][zio],
 
 ![](images/screen.jpg)
 
+# Notes
+
+## Requirements
+
+When LVMDB is used for as persistence store with recent JVM it requires JVM some options :
+```
+--add-opens java.base/java.nio=ALL-UNNAMED
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
+```
+
 [scala]: https://www.scala-lang.org/
 [zio]: https://zio.dev/
 [tapir]: https://tapir.softwaremill.com/
